Ejercicio parámetros de búsqueda terminado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <option value="angel">Angel</option>
         <option value="jiren race">Jiren race</option>
         <option value="nucleico">Nucleico</option>
-        <option value="nucleicobemigno">Nucleico benigno</option>
+        <option value="nucleicobenigno">Nucleico benigno</option>
         <option value="evil">Evil</option>
         <option value="unknown">Unknown</option>
     </select>
